# campus-api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: auth.rs  color_stuff.rs  constants.rs  encryption.rs  main.rs  ratelimit_keyextractor.rs  routes.rs  services.rs  types.rs
src/campus_backend/: login.rs  mod.rs  req_client_funcs.rs
