[package]
name = "campus-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
http = "1.1.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
